trunk/Archive2/4d/fec5606d0bc627/output
main.cpp:7:18: error: use of undeclared identifier 'fixed'; did you mean 'std::fixed'?
    std::cout << fixed << 2.7 << '\n' ; // *** error: fixed is not not a function call 
                 ^~~~~
                 std::fixed
/usr/include/c++/v1/ios:964:1: note: 'std::fixed' declared here
fixed(ios_base& __str)
^
main.cpp:8:18: error: use of undeclared identifier 'setprecision'; did you mean 'std::setprecision'?
    std::cout << setprecision(2) << 2.7 << '\n' ; // *** error: setprecision(int), int is not a member of std
                 ^~~~~~~~~~~~
                 std::setprecision
/usr/include/c++/v1/iomanip:233:1: note: 'std::setprecision' declared here
setprecision(int __n)
^
2 errors generated.
